--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "netlify-lambda serve src",
+    "dev": "netlify-lambda serve src --config ./webpack.functions.js",
     "build": "netlify-lambda build src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/nnjyami/LineBot#readme",
   "dependencies": {
+    "@line/bot-sdk": "^6.8.4",
+    "dotenv-webpack": "^1.7.0",
     "netlify-lambda": "^1.6.3"
   }
 }
