--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@line/bot-sdk": "^6.8.4",
     "dotenv-webpack": "^1.7.0",
-    "netlify-lambda": "^1.6.3"
+    "express": "^4.17.1",
+    "netlify-lambda": "^1.6.3",
+    "serverless-http": "^2.3.2"
   }
 }
